--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -2,10 +2,21 @@
 
 <div class="dashboard-component">
   <div class="sidebar">
-    <a routerLink="twitter" routerLinkActive="active" class="sidebar-menu-route">Twitter<p class="p">asd</p></a>
-    <a routerLink="discord" routerLinkActive="active" class="sidebar-menu-route">Discord</a>
-    <a routerLink="database" routerLinkActive="active" class="sidebar-menu-route">Database</a>
-    <a routerLink="nft" routerLinkActive="active" class="sidebar-menu-route">NFT</a>
+    <a routerLink="twitter" routerLinkActive="active" class="sidebar-menu-route"
+      >Twitter</a
+    >
+    <a routerLink="discord" routerLinkActive="active" class="sidebar-menu-route"
+      >Discord</a
+    >
+    <a
+      routerLink="database"
+      routerLinkActive="active"
+      class="sidebar-menu-route"
+      >Database</a
+    >
+    <a routerLink="nft" routerLinkActive="active" class="sidebar-menu-route"
+      >NFT</a
+    >
     <!-- <a></a> -->
   </div>
   <div class="sub-menu">
