--- a/src/app/components/app/app.component.sass
+++ b/src/app/components/app/app.component.sass
@@ -1,32 +1,60 @@
-$red: #be392b
-$text-color: #d6cebd
-$border-default: 1px solid #837260
-$button-background-color: #2e2826
+// $red: #be392b
+// $text-color: #d6cebd
+// $border-default: 1px solid #837260
+// $button-background-color: #2e2826
 
-$as: #879f91
-$sss: #595e5c
-$grey: #8e8c94
+// $as: #879f91
+// $sss: #595e5c
+// $grey: #8e8c94
 
-$grad1: #8e8c94
-$grad2: #f9ca9d
+// $grad1: #8e8c94
+// $grad2: #f9ca9d
 
 .navbar
     display: flex
-    flex-direction: raw
+    flex-direction: row
+    justify-content: center
+    align-items: center
+    // padding: 1% 25% 1% 25%
     // justify-content: space-around
-    gap: 10px
-    padding: 1%
+    gap: 25px
+    padding: 1% 0 1% 0
     width: 100%
     height: max-content
+    .logo
+        height: 128px
+        width: 128px
+    .navbar_route
+        appearance: none
+        text-decoration: none
+        font-family: Steiner
+        font-size: 16px
+        width: 140px
+        height: 40px
+        min-height: 40px
+        display: inline-block
+        box-sizing: border-box
+        text-align: center
+        line-height: inherit
+        touch-action: manipulation
+        vertical-align: middle
+        text-rendering: geometricprecision
+        text-transform: none
+        cursor: pointer
+        padding: 12px 14px
+        // border: 1px solid #f8fade
+
     // border: 1px solid red
     // background: blue
-    
+
 .active
     // background: #be392b
     // background: linear-gradient(90deg, rgba(190,57,43,1) 15%, rgba(46,40,38,1) 15%, rgba(46,40,38,1) 85%, rgba(190,57,43,1) 85%)
     // background: linear-gradient(to right, #403B4A 0%, #E7E9BB  51%, #403B4A  100%)
-    border: 1px solid #879f91
-    color: #879f91
+    // border: 1px solid #879f91
+    border-bottom: 1px solid #f8fade
+    // color: #879f91
+    color: #f8fade
     // outline: 1px solid #be392b
     // background-image: url('/assets/svg/svg11.svg')
     // background: linear-gradient(90deg, rgba(46,40,38,1) 0%, rgba(131,114,96,1) 100%)
@@ -34,4 +62,3 @@ $grad2: #f9ca9d
     // color: white
     // fill: #be392b
     // background: linear-gradient(90deg, rgba(190,57,43,1) 15%, rgba(46,40,38,1) 15%, rgba(46,40,38,1) 85%, rgba(190,57,43,1) 85%)
-
