--- a/src/app/components/dashboard/dashboard.component.sass
+++ b/src/app/components/dashboard/dashboard.component.sass
@@ -4,45 +4,33 @@
     border-collapse: collapse
     display: flex
     padding: 5px
+    .sidebar
+        height: 100%
+        width: 10%
+        padding: 0 5px 5px 5px
+        box-sizing: border-box
+        text-align: center
+        line-height: inherit
+        display: flex
+        flex-direction: column
+        .sidebar-menu-route
+            text-decoration: none
+            display: flex
+            flex-direction: row
+            align-items: center
+            justify-content: start
+            line-height: inherit
+            text-align: center
+            font-size: 20px
+            padding: 8px 24px 8px 10px
+            &:hover
+                background: #837260
 
 .active
-    // background: red
-    border-left: 6px double #879f91
-    color: #879f91
-    // .p
-    //     display: block
-    // &::after
-    //     .p
-    //         display: block
-        // content: " 😊"
-
-    // border-left: 10px solid #837260
-
-.sidebar
-    height: 100%
-    width: 10%
-    padding: 0 5px 5px 5px
-    box-sizing: border-box
-    // text-align: center
-    line-height: inherit
-    // background: red
-    display: flex
-    flex-direction: column
-
-.sidebar-menu-route
-    text-decoration: none
-    // color: white
-    font-size: 20px
-    padding: 8px 24px 8px 10px
-    // .active
-    //     content: "asdasd"
-    &:hover
-        background: #837260
-    p
-        display: none
-        // border-bottom: 1px solid #837260
-
-
+    border-left: 6px double #f8fade
+    // content: "asd"       
+    // color: #f8fade
+   
 
 .sub-menu
     height: 100%
