--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,5 +1,16 @@
 @import "../node_modules/jsoneditor/dist/jsoneditor.min.css"
 
+$color-dark-gray: #0f0e0e
+$color-light-beige: #e9ceac
+$color-dark-brown: #4d4241
+$color-brown: #7b695f
+$color-dark-gray-alt: #2b2726
+$color-light-brown: #b1937d
+
+// Фон
+$background: $color-dark-gray
+
+
 $red: #be392b
 $grad1: #080709
 $grad2: #4b5549
@@ -7,50 +18,27 @@ $grad2: #4b5549
 $star: #e1b47b
 
 @font-face
-  font-family: 'Dense'
-  src: url('./assets/fonts/Dense-Regular.otf') format('truetype'),
+  font-family: 'Ormont_Light'
+  src: url('./assets/fonts/Ormont_Light.ttf') format('truetype'),
+  font-weight: normal
+  font-style: normal
+
+
+@font-face
+  font-family: 'SERTOCHAHANE'
+  src: url('./assets/fonts/SERTOCHAHANE.ttf') format('truetype'),
   font-weight: normal
   font-style: normal
 
 @font-face
-  font-family: 'Aspergit'
-  src: url('./assets/fonts/Aspergit.otf') format('truetype')
+  font-family: 'LotusEater'
+  src: url('./assets/fonts/LotusEater.otf') format('truetype'),
   font-weight: normal
   font-style: normal
 
 @font-face
-  font-family: 'Josefine'
-  src: url('./assets/fonts/JosefinSans-Regular.ttf') format('truetype')
-  font-weight: normal
-  font-style: normal
-
-@font-face
-  font-family: 'JosefinSans-Thin'
-  src: url('./assets/fonts/JosefinSans-Thin.ttf') format('truetype')
-  font-weight: normal
-  font-style: normal
-
-@font-face
-  font-family: 'PoiretOne'
-  src: url('./assets/fonts/PoiretOne-Regular.ttf') format('truetype')
-  font-weight: normal
-  font-style: normal
-
-@font-face
-  font-family: 'Raleway'
-  src: url('./assets/fonts/Raleway-Thin.ttf') format('truetype')
-  font-weight: normal
-  font-style: normal
-
-@font-face
-  font-family: 'Steiner'
-  src: url('./assets/fonts/SteinerLight.ttf') format('truetype')
-  font-weight: normal
-  font-style: normal
-
-@font-face
-  font-family: 'Draftside'
-  src: url('./assets/fonts/Draftside-Light.otf') format('truetype'),
+  font-family: 'DelicateSans'
+  src: url('./assets/fonts/DelicateSans.ttf') format('truetype') 
   font-weight: normal
   font-style: normal
 
@@ -72,29 +60,6 @@ $star: #e1b47b
   font-weight: normal
   font-style: normal
 
-@font-face
-  font-family: 'CutiveMono'
-  src: url('./assets/fonts/CutiveMono-Regular.ttf') format('truetype'),
-  font-weight: normal
-  font-style: normal
-
-@font-face
-  font-family: 'MytypeRegular'
-  src: url('./assets/fonts/mytypeRedular.ttf') format('truetype'),
-  font-weight: normal
-  font-style: normal
-
-@font-face
-  font-family: 'SmallType'
-  src: url('./assets/fonts/SmallTypeWriting.ttf') format('truetype'),
-  font-weight: normal
-  font-style: normal
-
-@font-face
-  font-family: 'SmallTypeMedium'
-  src: url('./assets/fonts/SmallTypeWritingMedium.ttf') format('truetype'),
-  font-weight: normal
-  font-style: normal
 
 *,
 *::before,
@@ -108,31 +73,9 @@ body,html
   height: 100%
   width: 100%
   overflow: hidden
+  font-family: BrassMono
   a
     color: white
-  // letter-spacing: 4px
-  // position: relative
-  // font-family: Raleway !important
-  // font-family: PoiretOne !important
-  // font-family: JosefinSans-Thin !important
-  // font-family: Josefine !important
-  // font-family: Aspergit !important
-  // font-family: Dense !important
-  // background: #1a1f25
-  // background: #1c1a1a
-  // background: #050506
-  // background: transparent
-  // background-repeat: no-repeat
-  // box-sizing: border-box
-  // background-size: cover
-  // font-family: BrassMono-cozy
-  // font-family: Draftside
-  // font-family: BrassMono
-  // font-family: BrassMono-comfort
-    font-family: CutiveMono
-  // font-family: SmallType
-  // font-family: SmallTypeMedium
-  // font-family: MytypeRegular
 
 body
   z-index: -3
@@ -141,44 +84,59 @@ body
   // background: radial-gradient(ellipse at bottom, #4d4140 0%, #0f0e0e 100%)
   // background: radial-gradient(ellipse at bottom, #4d4140 0%, #1c1a1a 100%)
   // background: radial-gradient(ellipse at bottom, #58403e 0%, #0f0e0e 100%)
-  background: radial-gradient(ellipse at bottom, #3e2927 0%, #1c1a1a 100%)
+  background: radial-gradient(ellipse at bottom, #3e2927 0%, $background 100%)
+  // background: radial-gradient(ellipse at bottom, #3e2927 0%, #1c1a1a 100%)
   // background: radial-gradient(ellipse at bottom, $grad2 0%, $grad1 100%)
   // background: radial-gradient(ellipse at bottom, #2b1c1a 0%, #0f0e0e 100%)
-  // color: #4d4140
-  // color: #1c1a1a
 
 .button
   appearance: none
   text-decoration: none
-  font-family: Steiner
+  font-family: SERTOCHAHANE
   font-size: 16px
+  font-size: 20px
   width: 140px
   height: 40px
   min-height: 40px
-  color: #d6cebd
+  color: #c3baaa
   padding: 12px 14px
-  background-color: #2e2826
+  // background-color: #2e2826
+  background-color: #272220
   display: inline-block
   box-sizing: border-box
   text-align: center
   line-height: inherit
-  // line-height: 60%
   text-rendering: geometricprecision
   text-transform: none
   cursor: pointer
   border-radius: 6px
-  border: 1px solid #837260
+  border: 1px solid #96816a
   outline: 0
   touch-action: manipulation
   vertical-align: middle
-  outline: 0
+  position: relative
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7)
+  transition: background-color 0.3s ease, color 0.3s ease
+  overflow: hidden
+  &::before
+    content: ''
+    position: absolute
+    top: 0
+    left: -150%
+    width: 100%
+    height: 100%
+    // background: linear-gradient(120deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.5) 50%, rgba(255, 255, 255, 0.1) 100%)
+    background: linear-gradient(120deg, rgba(255, 255, 255, 0.1) 0%, rgba(128,113,93,255) 50%, rgba(255, 255, 255, 0.1) 100%)
+    transform: skewX(-20deg)
+    transition: all 0.7s ease
+  &:hover::before
+    left: 150%
   &:hover,
   &:active
     background-color: initial
     background-position: 0 0
-
   &:active
-    opacity: 0.5
+    // opacity: 0.5
 
 .inner-table-button
   text-decoration: none
@@ -260,9 +218,9 @@ body
 // ------------------------------------------------------------------
 
 @function multiple-box-shadow ($n)
-  $value: '#{random(2560)}px #{random(2560)}px #be8976'
+  $value: '#{random(2560)}px #{random(2560)}px #be605c'
   @for $i from 2 through $n
-    $value: '#{$value} , #{random(2560)}px #{random(2560)}px #be8976'
+    $value: '#{$value} , #{random(2560)}px #{random(2560)}px #be605c'
 
   @return unquote($value)
 
