--- a/src/app/components/web3/sub-menu/routine/routine.component.sass
+++ b/src/app/components/web3/sub-menu/routine/routine.component.sass
@@ -7,6 +7,10 @@
     // flex-wrap: wrap
     // justify-content: start
     gap: 25px
+    // .markdown
+    //     background: red
+    //     height: 200px
+    //     width: 200px
 
     .routine-list-component_routine-list
         display: flex
@@ -67,7 +71,8 @@
         border-radius: 6px
         padding: 5px
         width: 180px
-        height: 100px
+        // height: 100px
+        height: max-content
         // &:hover
         //     background: #423830
 
