--- a/src/app/components/web3/sub-menu/routine/routine.component.html
+++ b/src/app/components/web3/sub-menu/routine/routine.component.html
@@ -27,7 +27,7 @@
           <p>{{ item.category }}</p>
         </div>
         <div class="routine-list-component_element-card-footer">
-          <button>Details</button>
+          <a routerLink="{{ item.project }}">Details -></a>
         </div>
         <!-- <p>Detailed</p> -->
       </div>
@@ -108,6 +108,7 @@
       }
     </div>
   </div>
+ 
 </div>
 <!-- <div class="card">
   <div class="card-header">
