--- a/src/styles.sass
+++ b/src/styles.sass
@@ -10,7 +10,6 @@ $color-light-brown: #b1937d
 // Фон
 $background: $color-dark-gray
 
-
 $red: #be392b
 $grad1: #080709
 $grad2: #4b5549
@@ -22,7 +21,6 @@ $star: #e1b47b
   src: url('./assets/fonts/Ormont_Light.ttf') format('truetype'),
   font-weight: normal
   font-style: normal
-
 
 @font-face
   font-family: 'SERTOCHAHANE'
@@ -38,7 +36,7 @@ $star: #e1b47b
 
 @font-face
   font-family: 'DelicateSans'
-  src: url('./assets/fonts/DelicateSans.ttf') format('truetype') 
+  src: url('./assets/fonts/DelicateSans.ttf') format('truetype')
   font-weight: normal
   font-style: normal
 
@@ -59,7 +57,6 @@ $star: #e1b47b
   src: url('./assets/fonts/BrassMono-regular_cozy.otf') format('truetype'),
   font-weight: normal
   font-style: normal
-
 
 *,
 *::before,
@@ -287,3 +284,45 @@ $shadows-big: multiple-box-shadow(100)
     transform: translateY(0px)
   to
     transform: translateY(-2560px)
+
+.markdown-container
+  max-width: 50%
+  word-wrap: break-word
+  white-space: pre-wrap
+
+.markdown-container h1
+  font-size: 2em
+  color: #333
+
+.markdown-container h2
+  font-size: 1.75em
+  color: #444
+
+.markdown-container p
+  font-size: 1em
+  // color: #666
+  line-height: 1.6
+
+.markdown-container a
+  text-decoration: none
+  color: #1e90ff
+
+  &:hover
+    text-decoration: underline
+
+.markdown-container ul, .markdown-container ol
+  padding-left: 20px
+
+.markdown-container li
+  margin-bottom: 10px
+
+.markdown-container blockquote
+  margin: 20px 0
+  padding: 10px 20px
+  background-color: #f9f9f9
+  border-left: 5px solid #ccc
+
+.markdown-container code
+  background-color: #f4f4f4
+  padding: 2px 4px
+  border-radius: 4px
