--- a/src/app/components/dashboard/sub-dashboards/database-dashboard/database-dashboard.component.sass
+++ b/src/app/components/dashboard/sub-dashboards/database-dashboard/database-dashboard.component.sass
@@ -25,4 +25,7 @@
         display: flex
         gap: 5px
 .button.confirmed
-    background-color: blue
+    background-color: rgba( 0, 230, 118, 0.5 )
+    backdrop-filter: blur( 0.5px )
+    -webkit-backdrop-filter: blur( 0.5px )
+    box-shadow: 8px 8px 32px 8px rgba(0,230,118, 0.37)
