--- a/src/app/components/web3/sub-menu/treasure/treasure.component.sass
+++ b/src/app/components/web3/sub-menu/treasure/treasure.component.sass
@@ -1,4 +1,4 @@
-.routine-list-component
+.treasure-list-component
     display: flex
     flex-direction: column
     // height: fit-content
@@ -12,13 +12,13 @@
     //     height: 200px
     //     width: 200px
 
-    .routine-list-component_routine-list
+    .treasure-list-component_treasure-list
         display: flex
         width: 100%
         flex-direction: column
         gap: 5px
 
-    .routine-list-component_routine-list_content
+    .treasure-list-component_treasure-list_content
         display: flex
         flex-wrap: wrap
         gap: 5px
@@ -54,7 +54,7 @@
                 box-shadow: 0 8px 32px 0 rgba( 229,57,53, 0.37 )
             // border-radius: 10px
 
-    .routine-list-component_element-card
+    .treasure-list-component_element-card
         // background: rgba( 255, 255, 255, 0.1 )
         // box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 )
         // backdrop-filter: blur( 1.5px )
@@ -76,28 +76,28 @@
         // &:hover
         //     background: #423830
 
-    .routine-list-component_element-card-header
+    .treasure-list-component_element-card-header
         display: flex
         // justify-content: space-between
         align-items: center
-        .routine-list-component_element-card-link
+        .treasure-list-component_element-card-link
             text-decoration: none
             display: inline-block
             box-sizing: border-box
             text-align: center
             font-size: 20px
-        .routine-list-component_element-card-header_tag
+        .treasure-list-component_element-card-header_tag
 
-    .routine-list-component_element-card-body
+    .treasure-list-component_element-card-body
         display: flex
         // gap: 15px
         // justify-content: space-between
         flex-direction: column
-        .routine-list-component_element-card-body_rating
+        .treasure-list-component_element-card-body_rating
             display: flex
             justify-content: space-between
 
-    .routine-list-component_element-card-footer
+    .treasure-list-component_element-card-footer
         display: flex
         // justify-content: space-between
         justify-content: flex-end
