--- a/src/app/components/web3/web3.component.html
+++ b/src/app/components/web3/web3.component.html
@@ -12,6 +12,19 @@
       class="web3-component-sidebar-route"
       >Routine</a
     >
+
+    <a
+      routerLink="treasure"
+      routerLinkActive="active"
+      class="web3-component-sidebar-route"
+      >Treasure</a
+    >
+    <a
+      routerLink="arcade"
+      routerLinkActive="active"
+      class="web3-component-sidebar-route"
+      >Arcade</a
+    >
     <a
       routerLink="wallet"
       routerLinkActive="active"
