--- a/src/app/components/web3/sub-menu/routine/routine.component.html
+++ b/src/app/components/web3/sub-menu/routine/routine.component.html
@@ -22,12 +22,17 @@
           } -->
         </div>
         <div class="routine-list-component_element-card-body">
-          <p>{{ item.tier }}</p>
-          <p>{{ item.rate }}</p>
+          <div class="routine-list-component_element-card-body_rating">
+            <p>Tier {{ item.tier }}</p>
+            <p>{{ item.rate }}</p>
+          </div>
           <p>{{ item.category }}</p>
         </div>
         <div class="routine-list-component_element-card-footer">
-          <a routerLink="{{ item.project }}">Details -></a>
+          <!-- <p>{{ item.createdAt | date : "dd/MM/yy" }}</p> -->
+          @if (item.details.article_text) {<a routerLink="{{ item.project }}"
+            >Details -></a
+          >}
         </div>
         <!-- <p>Detailed</p> -->
       </div>
@@ -58,12 +63,17 @@
           } -->
         </div>
         <div class="routine-list-component_element-card-body">
-          <p>{{ item.tier }}</p>
-          <p>{{ item.rate }}</p>
+          <div class="routine-list-component_element-card-body_rating">
+            <p>Tier {{ item.tier }}</p>
+            <p>{{ item.rate }}</p>
+          </div>
           <p>{{ item.category }}</p>
         </div>
         <div class="routine-list-component_element-card-footer">
-          <button>Details</button>
+          <!-- <p>{{ item.createdAt | date : "dd/MM/yy" }}</p> -->
+          @if (item.details.article_text) {<a routerLink="{{ item.project }}"
+            >Details -></a
+          >}
         </div>
         <!-- <p>Detailed</p> -->
       </div>
@@ -94,12 +104,17 @@
           } -->
         </div>
         <div class="routine-list-component_element-card-body">
-          <p>{{ item.tier }}</p>
-          <p>{{ item.rate }}</p>
+          <div class="routine-list-component_element-card-body_rating">
+            <p>Tier {{ item.tier }}</p>
+            <p>{{ item.rate }}</p>
+          </div>
           <p>{{ item.category }}</p>
         </div>
         <div class="routine-list-component_element-card-footer">
-          <button>Details</button>
+          <!-- <p>{{ item.createdAt | date : "dd/MM/yy" }}</p> -->
+          @if (item.details.article_text) {<a routerLink="{{ item.project }}"
+            >Details -></a
+          >}
         </div>
         <!-- <p>Detailed</p> -->
       </div>
@@ -108,7 +123,7 @@
       }
     </div>
   </div>
- 
+  
 </div>
 <!-- <div class="card">
   <div class="card-header">
