--- a/src/styles.sass
+++ b/src/styles.sass
@@ -71,6 +71,7 @@ body,html
   width: 100%
   overflow: hidden
   font-family: BrassMono
+  font-size: 16px
   a
     color: white
 
@@ -85,6 +86,14 @@ body
   // background: radial-gradient(ellipse at bottom, #3e2927 0%, #1c1a1a 100%)
   // background: radial-gradient(ellipse at bottom, $grad2 0%, $grad1 100%)
   // background: radial-gradient(ellipse at bottom, #2b1c1a 0%, #0f0e0e 100%)
+
+::selection
+  background-color: #879f91 // Колір фону виділення */
+  color: #ffffff // Колір тексту під час виділення */
+
+::-moz-selection
+  background-color: #879f91 // Колір фону виділення для Firefox */
+  color: #ffffff // Колір тексту під час виділення для Firefox */
 
 .button
   appearance: none
@@ -286,43 +295,154 @@ $shadows-big: multiple-box-shadow(100)
     transform: translateY(-2560px)
 
 .markdown-container
-  max-width: 50%
-  word-wrap: break-word
+  // display: border-box
+  max-width: 800px
+  max-height: 800px
+  overflow-y: auto
+  // word-wrap: break-word
   white-space: pre-wrap
+  scrollbar-width: none // Firefox */
+  // -ms-overflow-style: none
+  // overflow-y: scroll
+  &::-webkit-scrollbar
+    width: 0 // Робить скролбар невидимим */
+    height: 0 // Робить скролбар невидимим для горизонтальної прокрутки */
+  // &
+  //   -ms-overflow-style: none // Для Internet Explorer і Edge */
+  //   scrollbar-width: none // Для Firefox */
 
 .markdown-container h1
-  font-size: 2em
-  color: #333
+  // font-size: 2em
+  // color: red
 
 .markdown-container h2
-  font-size: 1.75em
-  color: #444
+  // font-size: 1.75em
+  // color: 
 
 .markdown-container p
-  font-size: 1em
+  // font-size: 1em
   // color: #666
-  line-height: 1.6
+  // line-height: 1.2
 
 .markdown-container a
   text-decoration: none
-  color: #1e90ff
+  color: #879f91
 
   &:hover
     text-decoration: underline
 
 .markdown-container ul, .markdown-container ol
-  padding-left: 20px
+  padding-left: 30px
 
 .markdown-container li
-  margin-bottom: 10px
+  // margin-bottom: 10px
 
 .markdown-container blockquote
-  margin: 20px 0
-  padding: 10px 20px
-  background-color: #f9f9f9
+  // margin: 20px 0
+  // padding: 10px 20px
+  // background-color: #f9f9f9
   border-left: 5px solid #ccc
 
 .markdown-container code
   background-color: #f4f4f4
-  padding: 2px 4px
+  // padding: 2px 4px
   border-radius: 4px
+
+  // NEW MARKDOWN
+// .markdown-container
+//   max-width: 800px
+//   max-height: 80%
+//   overflow-y: scroll
+//   margin: 0 auto
+//   padding: 20px
+//   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+//   line-height: 1.6
+//   color: #333
+//   // word-wrap: break-word
+//   // white-space: pre-wrap
+
+// .markdown-container h1,
+// .markdown-container h2,
+// .markdown-container h3,
+// .markdown-container h4,
+// .markdown-container h5,
+// .markdown-container h6
+//   color: #222
+//   line-height: 1.2
+//   margin-top: 1.5em
+//   margin-bottom: 0.5em
+
+// .markdown-container h1
+//   font-size: 2.5em
+
+// .markdown-container h2
+//   font-size: 2em
+
+// .markdown-container h3
+//   font-size: 1.75em
+
+// .markdown-container h4
+//   font-size: 1.5em
+
+// .markdown-container h5
+//   font-size: 1.25em
+
+// .markdown-container h6
+//   font-size: 1em
+
+// .markdown-container p
+//   margin: 1em 0
+
+// .markdown-container a
+//   color: #1e90ff
+//   text-decoration: none
+
+//   &:hover
+//     text-decoration: underline
+
+// .markdown-container ul,
+// .markdown-container ol
+//   padding-left: 20px
+//   margin: 1em 0
+
+// .markdown-container li
+//   margin-bottom: 0.5em
+
+// .markdown-container blockquote
+//   margin: 1.5em 0
+//   padding: 10px 20px
+//   background-color: #f9f9f9
+//   border-left: 5px solid #ccc
+//   color: #666
+//   font-style: italic
+
+// .markdown-container code
+//   background-color: #f4f4f4
+//   padding: 2px 4px
+//   border-radius: 4px
+//   font-family: 'Courier New', Courier, monospace
+
+// .markdown-container pre code
+//   display: block
+//   padding: 10px
+//   background-color: #f4f4f4
+//   overflow-x: auto
+
+// .markdown-container hr
+//   border: 0
+//   border-top: 1px solid #ccc
+//   margin: 2em 0
+
+// .markdown-container table
+//   width: 100%
+//   border-collapse: collapse
+//   margin: 1em 0
+
+// .markdown-container th,
+// .markdown-container td
+//   border: 1px solid #ddd
+//   padding: 8px
+//   text-align: left
+
+// .markdown-container th
+//   background-color: #f4f4f4
