--- a/src/app/components/web3/sub-menu/arcade/arcade-overview/arcade-overview.component.html
+++ b/src/app/components/web3/sub-menu/arcade/arcade-overview/arcade-overview.component.html
@@ -1,1 +1,7 @@
-<p>arcade-overview works!</p>
+<div class="arcade-overview-component">
+    <!-- <div class="activity-overview-component_header">Header</div> -->
+    <div class="treasure-overview-component_article-content markdown-container">
+      <markdown [data]="article_content"></markdown>
+    </div>
+  </div>
+  
