--- a/src/app/components/web3/sub-menu/treasure/treasure-overview/treasure-overview.component.sass
+++ b/src/app/components/web3/sub-menu/treasure/treasure-overview/treasure-overview.component.sass
@@ -1,17 +1,7 @@
 .treasure-overview-component
-    // width: 100%
-    // height: 100%
+    width: 100%
+    height: 100%
     display: flex
-    justify-content: center 
-    // overflow-y: scroll
-    
+    justify-content: center
 
     .treasure-overview-component_article-content
-        // max-width: 50%
-        // height: 80%
-        
-        // max-width: 50%
-        // padding: 10px 0 20px 20px
-        // max-height: 80%
-
-        // background: red
