--- a/src/app/components/lending/lending.component.sass
+++ b/src/app/components/lending/lending.component.sass
@@ -14,7 +14,7 @@
     .navbar_route
         appearance: none
         text-decoration: none
-        font-family: DelicateSans
+        font-family: CaviarDreams
         // font-family: Steiner
         // border: 1px solid red
         font-size: 26px
