--- a/src/app/components/web3/sub-menu/routine/routine.component.html
+++ b/src/app/components/web3/sub-menu/routine/routine.component.html
@@ -1,5 +1,6 @@
 <!-- <p>routine works!</p> -->
 <div class="routine-list-component">
+  <!-- <img src="../../../../../assets/svg/tier-1-wave.svg"> -->
   <div class="routine-list-component_routine-list">
     <p>Daily</p>
     <div class="routine-list-component_routine-list_content">
@@ -15,11 +16,6 @@
             target="_blank"
             >{{ item.name }}</a
           >
-          <!-- @for (tag of item.tags; track $index) {
-          <div class="routine-list-component_element-card-header_tag">
-            {{ tag }}
-          </div>
-          } -->
         </div>
         <div class="routine-list-component_element-card-body">
           <div class="routine-list-component_element-card-body_rating">
@@ -56,11 +52,6 @@
             target="_blank"
             >{{ item.name }}</a
           >
-          <!-- @for (tag of item.tags; track $index) {
-          <div class="routine-list-component_element-card-header_tag">
-            {{ tag }}
-          </div>
-          } -->
         </div>
         <div class="routine-list-component_element-card-body">
           <div class="routine-list-component_element-card-body_rating">
@@ -123,7 +114,6 @@
       }
     </div>
   </div>
-  
 </div>
 <!-- <div class="card">
   <div class="card-header">
