--- a/src/app/components/home/home.component.sass
+++ b/src/app/components/home/home.component.sass
@@ -10,7 +10,7 @@
     .navbar_route
         appearance: none
         text-decoration: none
-        font-family: DelicateSans
+        font-family: CaviarDreams
         // font-family: Steiner
 
         font-size: 24px
